# cosmoz-data-pipeline

./: .dockerignore  .editorconfig  .env  .gitignore  Dockerfile  application.Singularity  bitbucket-pipelines.yml  cosmoz_process_levels.py  detect_duplicates.py  docker-compose.yml  dummy_hosts.txt  get_intensities.py  get_nmdb_intensities.py  get_nmdb_intensities.sh  influxdb.conf  populate_dbs.sh  process_levels.sh  pyproject.toml  run_mongodb_converter.py  singularity-run.sh  update_raws_from_mssql.sh  upload_metrics.sh
contrib/docker/: .env  dev-up.sh  docker-compose.base.yml  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
contrib/docker/Dockerfiles/: pipeline.Dockerfile
nmdb/: _influx_db_config.py  _mongo_db_config.py  config.py  data_getter.py  entrypoint.py  influx_db.py  intensity.py  mongo_db.py  utils.py
pipeline/: _influx_db_config.py  _mongo_db_config.py  cosmoz_process_levels.py  csv-influx-converter.py  csv-mongodb-converter.py  csv_mongodb_converter.py  detect_duplicates.py  influx_cached_writer.py  level1->level2.sql  level2->level3.sql  level3->level4.sql  utils.py
scripts/: all_stations.tsv  cosmoz-process-levels.py  cosmoz_processing_levels.py  csv-influx-converter.py  csv-mongodb-converter.py  influx_cached_writer.py  mssql-influx-converter.py  raw->level1.sql  requirements.txt  silo.csv  sql_db.py  stations.csv  utils.py
singularity/: application.Singularity  dummy_hosts.txt  influxdb.Singularity  mongodb.Singularity  singularity-run.sh
tsdb/meta/: meta.db
(+2 files in other folders)
